# ChickenDjangoBook

./: .gitignore  .prettierignore  README.md  conftest.py  dev-requirements.txt  env.txt  future.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
ChickenDjangoBook/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  forms.py  login_backend.py  models.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_skills_level_alter_skills_name.py  0002_user_about_user_is_visible_user_phone_number.py  0003_alter_user_about.py  0003_skills_rating.py  0004_remove_skills_rating_alter_skills_level.py  0004_user_profile_image.py  0005_user_git_hub_user_instagram_user_linked_in.py  0005_user_location_user_work_focus.py  0006_alter_user_git_hub_alter_user_instagram_and_more.py  0006_skill_user_skills.py  0007_user_personal_web.py  0008_project.py  0009_project_user.py  0010_user_cur_proj_user_cur_proj_desc_user_cur_proj_name.py  0011_rename_cur_proj_desc_user_cur_project_desc_and_more.py  0012_rename_cur_project_desc_user_current_project_desc_and_more.py  0013_remove_user_current_project_desc.py  0014_remove_user_current_project_link_and_more.py  0015_alter_message_status.py  (+1 more)
cards/: context_processors.py  forms.py  models.py  urls.py  views.py
chickenmessages/: apps.py  forms.py  models.py  urls.py  views.py
sql/: 001.sql
static/: script.js  style.css
templates/: main.html
tests/: conftest.py  factories.py  selenium_email_backend.py  test_models.py  test_registration_form_view.py  test_selenium.py  test_try4.py  test_views.py
(+37 files in other folders)
