[tool.poetry]
name = "chickendjangobook"
version = "0.1.0"
description = ""
authors = ["Jiří Trnečka <trnecka.jiri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
